--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -177,6 +177,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:id="@+id/reminder"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal"
