--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -12,8 +12,9 @@
         android:id="@+id/relativeLayout"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/card"
-        android:maxHeight="70dp"
+        android:maxHeight="80dp"
         android:paddingBottom="10dp"
         app:layout_constraintHeight_max="210dp"
         app:layout_constraintBottom_toBottomOf="parent"
