--- a/app/src/main/res/layout/activity_password_change.xml
+++ b/app/src/main/res/layout/activity_password_change.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
-                android:text="Lütfen Eski Şifrenizi Girin"
+                android:text="@string/l_tfen_eski_ifrenizi_girin"
                 android:gravity="center"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/clr_grey_text"
@@ -112,7 +112,7 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Devam et"
+                android:text="@string/devam_et"
                 android:background="@drawable/bg_btn"
                 android:onClick="changePassword"
                 android:layout_marginStart="30dp"
