--- a/app/src/main/res/layout/activity_add_memory.xml
+++ b/app/src/main/res/layout/activity_add_memory.xml
@@ -63,7 +63,7 @@
             android:layout_marginStart="15dp"
             android:fontFamily="@font/aclonica"
             android:layout_marginEnd="15dp"
-            android:hint="Başlık..."
+            android:hint="@string/title"
             android:textSize="18sp"
             android:background="@drawable/radius3"
             tools:ignore="RtlCompat" />
@@ -84,7 +84,7 @@
             android:textAlignment="textStart"
             android:textColorHint="?background_Color"
             android:gravity="start"
-            android:hint="Yazmaya Başlayın..."
+            android:hint="@string/startWriting"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:layout_marginStart="15dp"
