--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
-                android:text="Lütfen Şifrenizi Giriniz"
+                android:text="@string/l_tfen_ifrenizi_giriniz"
                 android:gravity="center"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/clr_grey_text"
@@ -116,7 +116,7 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Devam et"
+                android:text="@string/devam_et"
                 android:background="@drawable/bg_btn"
                 android:onClick="getPassword"
                 android:layout_marginStart="30dp"
