--- a/app/src/main/res/layout/activity_password_new_first.xml
+++ b/app/src/main/res/layout/activity_password_new_first.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
-                android:text="Lütfen Şifrenizi Oluşturun"
+                android:text="@string/l_tfen_ifrenizi_olu_turun"
                 android:gravity="center"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/clr_grey_text"
@@ -117,7 +117,7 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Devam et"
+                android:text="@string/devam_et"
                 android:background="@drawable/bg_btn"
                 android:onClick="setPassword"
                 android:layout_marginStart="30dp"
